# sender-trades

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LESSONS_LEARNED.md  Makefile  README.md  compose.yml  config.yaml  config.yaml.example  pyproject.toml  run_trades.sh
.agents/skills/: 0dte-trader-skill.md  pre-commit-verification.md
.github/workflows/: ci.yml  deploy.yml
docs/source/: api.rst  conf.py  engine.rst  index.rst  ingestion.rst  mcp.rst  models.rst
logs/2026-07-18/: run-1f8bdd4f510c.json  run-2be7b94247dd.json  run-3b41afcb8f53.json  run-6bcdb583308c.json  run-c8738c2f5b9a.json  run-e55f71ed150c.json  summary-1f8bdd4f510c.json  summary-2be7b94247dd.json  summary-3b41afcb8f53.json  summary-6bcdb583308c.json  summary-c8738c2f5b9a.json  summary-e55f71ed150c.json
site/: index.html
src/: config.py  email_sender.py  logging_setup.py  main.py  pipeline.py  prediction_tracker.py  timezone.py
src/engine/: base.py  decision.py  options_strategy.py  risk.py  strategy_a.py  strategy_b.py  strategy_c.py
src/ingestion/: fetcher.py  parser.py  snapshot_loader.py  status.py
src/llm/: __init__.py  client.py  resynthesizer.py  trade_signal.py
src/mcp/: client.py  schemas.py
src/models/: __init__.py  briefing.py  market.py  recommendation.py
tests/: conftest.py  test_config.py  test_decision.py  test_fetcher.py  test_llm.py  test_mcp_client.py  test_models.py  test_options_strategy.py  test_parser.py  test_pipeline.py  test_risk.py  test_status.py  test_strategies.py  test_trade_signal.py
