[project]
name = "sender-trades"
version = "0.1.0"
description = "0DTE intraday options trading recommendation system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6.0,<7",
    "structlog>=25.1,<26",
    "feedparser>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pytest-asyncio]
asyncio_mode = "auto"
